--- a/BackEnd/src/main/webapp/WEB-INF/web.xml
+++ b/BackEnd/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,10 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
-    <context-param>
-        <param-name>db-class</param-name>
-        <param-value>com.mysql.cj.jdbc.Driver</param-value>
-    </context-param>
-    <context-param>
-        <param-name>dburl</param-name>
-        <param-value>jdbc:mysql://localhost:3306/student</param-value>
-    </context-param>
-    <context-param>
-        <param-name>db-username</param-name>
-        <param-value>root</param-value>
-    </context-param>
-    <context-param>
-        <param-name>db-password</param-name>
-        <param-value>Mahee@10985</param-value>
-    </context-param>
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/thogakadepos</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
