--- a/BackEnd/src/main/webapp/WEB-INF/web.xml
+++ b/BackEnd/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <context-param>
+        <param-name>origin</param-name>
+        <param-value>http://127.0.0.1:5501</param-value>
+    </context-param>
+    <filter-mapping>
+        <filter-name>CORSFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>CORSFilter</filter-name>
+        <filter-class>lk.ijse.backend.filter.CORSFilter</filter-class>
+    </filter>
 
     <resource-ref>
         <description>DB Connection</description>
